panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__constexpr__test_constexpr_eval.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/constexpr/test_constexpr_eval.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/constexpr/test_constexpr_eval.c"
   (declaration external (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)) ∅)
   (function-definition external stack-size=56
      (main~1 `fn() -> int` (static main))
      (compound-statement
         (definition (n~3 `unsigned int` (static n.3)) (left-shift `unsigned int` (1u `unsigned int`) (31 `int`)))
         (expression
            (call `int` @0
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @8
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @16
                  (noop-type-conversion `ptr<char>` @16
                     (addressof `ptr<array<char; 4>>` @16
                        (string `array<char; 4>` @void "%d\n\0"))))
               (equal `int` @24
                  (n~3 `unsigned int` (static n.3))
                  (left-shift `unsigned int` @28
                     (1 `unsigned int` @28)
                     (31 `int` @32)))))
         (definition (a~4 `int` (static a.4)) (right-shift `int` (0x12345 `int`) (4 `int`)))
         (expression
            (call `int` @0
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @8
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @16
                  (noop-type-conversion `ptr<char>` @16
                     (addressof `ptr<array<char; 6>>` @16
                        (string `array<char; 6>` @void "0x%x\n\0"))))
               (a~4 `int` (static a.4))))
         (definition (b~5 `int` (static b.5)) (bit-and `int` (0b101010 `int`) (0b111 `int`)))
         (expression
            (call `int` @0
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @8
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @16
                  (noop-type-conversion `ptr<char>` @16
                     (addressof `ptr<array<char; 6>>` @16
                        (string `array<char; 6>` @void "0b%b\n\0"))))
               (b~5 `int` (static b.5))))
         (definition (c~6 `int` (static c.6)) (bit-or `int` (0b101010 `int`) (0b111 `int`)))
         (expression
            (call `int` @0
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @8
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @16
                  (noop-type-conversion `ptr<char>` @16
                     (addressof `ptr<array<char; 6>>` @16
                        (string `array<char; 6>` @void "0b%b\n\0"))))
               (c~6 `int` (static c.6))))
         (definition (d~7 `int` (static d.7)) (bit-xor `int` (0b101010 `int`) (0b111 `int`)))
         (expression
            (call `int` @0
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @8
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @16
                  (noop-type-conversion `ptr<char>` @16
                     (addressof `ptr<array<char; 6>>` @16
                        (string `array<char; 6>` @void "0b%b\n\0"))))
               (d~7 `int` (static d.7))))
         (definition (ll~8 `long long` (static ll.8)) (subtract `long long` (123ll `long long`) (sign-extend `long long` (456 `int`))))
         (expression
            (call `int` @0
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @8
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @16
                  (noop-type-conversion `ptr<char>` @16
                     (addressof `ptr<array<char; 6>>` @16
                        (string `array<char; 6>` @void "%lld\n\0"))))
               (ll~8 `long long` (static ll.8))))
         (definition (ull~9 `unsigned long long` (static ull.9)) (add `unsigned long long` (123ull `unsigned long long`) (sign-extend `unsigned long long` (456 `int`))))
         (expression
            (call `int` @0
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @8
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @16
                  (noop-type-conversion `ptr<char>` @16
                     (addressof `ptr<array<char; 6>>` @16
                        (string `array<char; 6>` @void "%llu\n\0"))))
               (ull~9 `unsigned long long` (static ull.9))))
         (definition (e~10 `int` (static e.10)) (equal `int` (1ll `long long`) (sign-extend `long long` (0 `int`))))
         (expression
            (call `int` @0
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @8
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @16
                  (noop-type-conversion `ptr<char>` @16
                     (addressof `ptr<array<char; 4>>` @16
                        (string `array<char; 4>` @void "%d\n\0"))))
               (e~10 `int` (static e.10))))
         (definition (f~11 `int` (static f.11)) (not-equal `int` (noop-type-conversion `unsigned int` (1 `int`)) (0u `unsigned int`)))
         (expression
            (call `int` @0
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @8
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @16
                  (noop-type-conversion `ptr<char>` @16
                     (addressof `ptr<array<char; 4>>` @16
                        (string `array<char; 4>` @void "%d\n\0"))))
               (f~11 `int` (static f.11))))
         (definition (g~12 `int` (static g.12)) (less `int` (1 `int`) (0 `int`)))
         (expression
            (call `int` @0
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @8
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @16
                  (noop-type-conversion `ptr<char>` @16
                     (addressof `ptr<array<char; 4>>` @16
                        (string `array<char; 4>` @void "%d\n\0"))))
               (g~12 `int` (static g.12))))
         (definition (h~13 `int` (static h.13)) (less-equal `int` (0u `unsigned int`) (noop-type-conversion `unsigned int` (0 `int`))))
         (expression
            (call `int` @0
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @8
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @16
                  (noop-type-conversion `ptr<char>` @16
                     (addressof `ptr<array<char; 4>>` @16
                        (string `array<char; 4>` @void "%d\n\0"))))
               (h~13 `int` (static h.13))))
         (definition (i~14 `int` (static i.14)) (greater `int` (1 `int`) (0 `int`)))
         (expression
            (call `int` @0
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @8
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @16
                  (noop-type-conversion `ptr<char>` @16
                     (addressof `ptr<array<char; 4>>` @16
                        (string `array<char; 4>` @void "%d\n\0"))))
               (i~14 `int` (static i.14))))
         (definition (j~15 `int` (static j.15)) (greater-equal `int` (42 `int`) (42 `int`)))
         (expression
            (call `int` @0
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @8
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @16
                  (noop-type-conversion `ptr<char>` @16
                     (addressof `ptr<array<char; 4>>` @16
                        (string `array<char; 4>` @void "%d\n\0"))))
               (j~15 `int` (static j.15))))
         (definition (k~16 `ptr<int>` (static k.16)) (noop-type-conversion `ptr<int>` (nullptr `nullptr_t`)))
         (expression
            (call `int` @0
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @8
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @16
                  (noop-type-conversion `ptr<char>` @16
                     (addressof `ptr<array<char; 8>>` @16
                        (string `array<char; 8>` @void "%zu %d\n\0"))))
               (noop-type-conversion `unsigned long` (static k.16) (k~16 `ptr<int>` (static k.16)))
               (ptr-equal `int` @24
                  (k~16 `ptr<int>` (static k.16))
                  (nullptr `nullptr_t` @32))))
         (definition (l~17 `array<char; 12>` (static l.17)) (string `array<char; 12>` "hello world\0"))
         (expression
            (call `int` @0
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @8
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @16
                  (noop-type-conversion `ptr<char>` @16
                     (addressof `ptr<array<char; 9>>` @16
                        (string `array<char; 9>` @void "%s: %zu\n\0"))))
               (noop-type-conversion `ptr<char>` @24
                  (addressof `ptr<array<char; 12>>` @24
                     (l~17 `array<char; 12>` (static l.17))))
               (12 `unsigned long` @32)))
         (definition (m~18 `int` (static m.18))
            (logical-and `int`
               (42 `int`)
               (27 `int`)))
         (expression
            (call `int` @0
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @8
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @16
                  (noop-type-conversion `ptr<char>` @16
                     (addressof `ptr<array<char; 4>>` @16
                        (string `array<char; 4>` @void "%d\n\0"))))
               (m~18 `int` (static m.18))))
         (definition (o~19 `int` (static o.19))
            (logical-and `int`
               (0 `int`)
               (divide `int` (1 `int`) (0 `int`))))
         (expression
            (call `int` @0
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @8
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @16
                  (noop-type-conversion `ptr<char>` @16
                     (addressof `ptr<array<char; 4>>` @16
                        (string `array<char; 4>` @void "%d\n\0"))))
               (o~19 `int` (static o.19))))
         (definition (p~20 `int` (static p.20))
            (logical-or `int`
               (false `bool`)
               (123 `int`)))
         (expression
            (call `int` @0
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @8
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @16
                  (noop-type-conversion `ptr<char>` @16
                     (addressof `ptr<array<char; 4>>` @16
                        (string `array<char; 4>` @void "%d\n\0"))))
               (p~20 `int` (static p.20))))
         (definition (q~21 `int` (static q.21))
            (logical-or `int`
               (42 `int`)
               (divide `int` (1 `int`) (0 `int`))))
         (expression
            (call `int` @0
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @8
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @16
                  (noop-type-conversion `ptr<char>` @16
                     (addressof `ptr<array<char; 4>>` @16
                        (string `array<char; 4>` @void "%d\n\0"))))
               (q~21 `int` (static q.21))))
         (definition (r~22 `int` (static r.22))
            (logical-or `int`
               (0 `int`)
               (false `bool`)))
         (expression
            (call `int` @0
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @8
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @16
                  (noop-type-conversion `ptr<char>` @16
                     (addressof `ptr<array<char; 4>>` @16
                        (string `array<char; 4>` @void "%d\n\0"))))
               (r~22 `int` (static r.22))))
         (definition (s~23 `unsigned int` (static s.23))
            (conditional `unsigned int`
               (0 `int`)
               (divide `unsigned int` (noop-type-conversion `unsigned int` (1 `int`)) (0u `unsigned int`))
               (noop-type-conversion `unsigned int` (42 `int`))))
         (expression
            (call `int` @0
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @8
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @16
                  (noop-type-conversion `ptr<char>` @16
                     (addressof `ptr<array<char; 4>>` @16
                        (string `array<char; 4>` @void "%u\n\0"))))
               (s~23 `unsigned int` (static s.23))))
         (definition (t~24 `long` (static t.24))
            (conditional `long`
               (1234ul `unsigned long`)
               (5l `long`)
               (divide `long` (sign-extend `long` (42 `int`)) (0l `long`))))
         (expression
            (call `int` @0
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @8
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @16
                  (noop-type-conversion `ptr<char>` @16
                     (addressof `ptr<array<char; 5>>` @16
                        (string `array<char; 5>` @void "%ld\n\0"))))
               (t~24 `long` (static t.24))))
         (definition (u~25 `int` (static u.25))
            (combine `int`
               (false `bool`)
               (42 `int`)))
         (expression
            (call `int` @0
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @8
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @16
                  (noop-type-conversion `ptr<char>` @16
                     (addressof `ptr<array<char; 4>>` @16
                        (string `array<char; 4>` @void "%d\n\0"))))
               (u~25 `int` (static u.25))))
         (definition (v~26 `int` (static v.26))
            (combine `int`
               (void-cast `void` (0 `int`))
               (1234 `int`)))
         (expression
            (call `int` @0
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @8
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @16
                  (noop-type-conversion `ptr<char>` @16
                     (addressof `ptr<array<char; 4>>` @16
                        (string `array<char; 4>` @void "%d\n\0"))))
               (v~26 `int` (static v.26))))
         (compound-statement
            (definition (a~27 `long` (static a.27)) (sign-extend `long` (negate `int` (20 `int`))))
            (definition (b~28 `ptr<long>` (static b.28))
               (addressof `ptr<long>`
                  (a~27 `long`)))
            (expression
               (call `int` @0
                  (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @8
                     (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
                  (noop-type-conversion `ptr<char const>` @16
                     (noop-type-conversion `ptr<char>` @16
                        (addressof `ptr<array<char; 5>>` @16
                           (string `array<char; 5>` @void "%ld\n\0"))))
                  (deref `long` @24 (b~28 `ptr<long>` (static b.28)))))
            (expression
               (combine `long` @0
                  (assign `ptr<long>` @8
                     (unnamed-temporary~29 `ptr<long>` @8)
                     (addressof `ptr<long>` @8
                        (deref `long` @8 (b~28 `ptr<long>` (static b.28)))))
                  (assign `long` @0
                     (deref `long` @0 (unnamed-temporary~29 `ptr<long>` @8))
                     (add `long` @16
                        (deref `long` @16 (unnamed-temporary~29 `ptr<long>` @8))
                        (sign-extend `long` @24 (1 `int` @32))))))
            (expression
               (call `int` @0
                  (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @8
                     (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
                  (noop-type-conversion `ptr<char const>` @16
                     (noop-type-conversion `ptr<char>` @16
                        (addressof `ptr<array<char; 5>>` @16
                           (string `array<char; 5>` @void "%ld\n\0"))))
                  (a~27 `long` (static a.27))))))))

----- stderr -----
