panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__constexpr__test_initialisation_of_static_array_of_unknown_length.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/constexpr/test_initialisation_of_static_array_of_unknown_length.c
---
success: false
exit_code: 101
----- stdout -----

----- stderr -----
[31mThe application panicked (crashed).[0m
Message:  [36minternal error: entered unreachable code: arrays without a length are incomplete types and don’t have a size[0m
Location: [35mpanko-sema/src/ty.rs[0m:[35m376[0m

Backtrace omitted. Run with RUST_BACKTRACE=1 environment variable to display it.
Run with RUST_BACKTRACE=full to include source snippets.
