panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__constexpr__test_string_literal_in_compound_literal.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/constexpr/test_string_literal_in_compound_literal.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/constexpr/test_string_literal_in_compound_literal.c"
   (declaration external (puts~0 `fn(∅: ptr<char const>) -> int` (static puts)) ∅)
   (function-definition external stack-size=24
      (main~1 `fn() -> int` (static main))
      (compound-statement
         (definition (compound_literal.4~5 `ptr<char const>` (static compound_literal.4.5))
            (braced
               (subobject +0
                  (noop-type-conversion `ptr<char const>`
                     (noop-type-conversion `ptr<char>`
                        (addressof `ptr<array<char; 12>>`
                           (string `array<char; 12>` "hello world\0")))))))
         (definition (s~3 `ptr<char const>` (static s.3))
            (compound-literal `ptr<char const>`
               (definition compound_literal.4~5 `ptr<char const>`
                  (braced
                     (subobject +0
                        (noop-type-conversion `ptr<char const>`
                           (noop-type-conversion `ptr<char>`
                              (addressof `ptr<array<char; 12>>`
                                 (string `array<char; 12>` "hello world\0")))))))))
         (expression
            (call `int` @0
               (addressof `ptr<fn(∅: ptr<char const>) -> int>` @8
                  (puts~0 `fn(∅: ptr<char const>) -> int` (static puts)))
               (s~3 `ptr<char const>` (static s.3)))))))

----- stderr -----
